--- a/css/style.css
+++ b/css/style.css
@@ -249,9 +249,6 @@ margin-top: 40px;
 }
 
 
-
-
-
 .iphone__gif{
     width: 43%;
 }
@@ -322,3 +319,71 @@ margin-top: 40px;
     margin: 0 auto;
     width: 100%;
 }
+
+/* airbnb */
+
+.airbnb {
+    margin-top: 50px;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.airbnb__back {
+    width: 80%;
+    position: relative;
+    overflow: hidden;
+}
+.airbnb__back-img {
+    width: 100%;
+    filter: brightness(0.6); 
+    animation: scale 8s ease-in-out infinite;
+}
+
+@keyframes scale {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.3);
+    }
+}
+.airbnb__back-img img{
+    width: 100%;
+    object-fit: contain;
+}
+.airbnb__content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    z-index: 2;
+    
+}
+.airbnb__title-container{
+    width: 69%;
+}
+.airbnb__title{
+    font-family: 'Manrope', sans-serif;
+    font-size: 103px;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+}
+.airbnb__logo {
+    z-index: 2;
+    width: 29%;
+}
+.airbnb__logo img{
+    width: 58%;
+    object-fit: contain;
+}
+
+/* bmw */
+
