--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ margin-top: 40px;
 .iphone{
     margin-top: 50px;
     width: 100%;
+    max-width: 1519px;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -262,6 +263,7 @@ margin-top: 40px;
     margin-top: 50px;
     width: 100%;
     height: 300px;
+    max-width: 1519px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -325,6 +327,7 @@ margin-top: 40px;
 .airbnb {
     margin-top: 50px;
     width: 100%;
+    max-width: 1519px;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -394,6 +397,7 @@ margin-top: 40px;
     margin-bottom: 50px;
     width: 100%;
     height: 300px;
+    max-width: 1519px;
     display: flex;
     justify-content: center;
     align-items: center;
